Added classes for Authentication and Authorization

--- a/demo2/src/main/resources/application.properties
+++ b/demo2/src/main/resources/application.properties
@@ -7,8 +7,8 @@ server.port=8081
 database.ip = ${MYSQL_IP:localhost}
 database.port = ${MYSQL_PORT:3306}
 database.person = ${MYSQL_USER:root}
-database.password = ${MYSQL_PASSWORD:root}
-database.name = ${MYSQL_DBNAME:mydb}
+database.password = ${MYSQL_PASSWORD:MirunaB2024}
+database.name = ${MYSQL_DBNAME:my_db}
 
 
 #############################################
