Posts and Comments initial try

--- a/demo2/src/main/resources/application.properties
+++ b/demo2/src/main/resources/application.properties
@@ -25,3 +25,8 @@ spring.jpa.hibernate.ddl-auto = update
 
 # Sql queries logging
 logging.level.org.hibernate.SQL=DEBUG
+
+##################################################
+### CONFIGURARE PENTRU SERVIREA FI?IERELOR STATICE ###
+##################################################
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
