Posts and Comments initial try

--- a/demo1/src/main/resources/application.properties
+++ b/demo1/src/main/resources/application.properties
@@ -27,3 +27,5 @@ spring.jpa.hibernate.ddl-auto = update
 
 # Sql queries logging
 logging.level.org.hibernate.SQL=DEBUG
+
+spring.servlet.multipart.enabled=true
