--- a/demo2/src/main/resources/application.properties
+++ b/demo2/src/main/resources/application.properties
@@ -25,8 +25,4 @@ spring.jpa.hibernate.ddl-auto = update
 
 # Sql queries logging
 logging.level.org.hibernate.SQL=DEBUG
-
-##################################################
-### CONFIGURARE PENTRU SERVIREA FI?IERELOR STATICE ###
-##################################################
-spring.web.resources.static-locations=classpath:/static/,file:uploads/
+spring.servlet.multipart.enabled=true
