--- a/demo1/src/main/resources/application.properties
+++ b/demo1/src/main/resources/application.properties
@@ -29,3 +29,5 @@ spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.SQL=DEBUG
 
 spring.servlet.multipart.enabled=true
+
+spring.security.filter.disabled=true
