--- a/demo1/pom.xml
+++ b/demo1/pom.xml
@@ -115,8 +115,14 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<version>8.2.0</version>
 		</dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+            <scope>compile</scope>
+        </dependency>
 
-<!--		<dependency>-->
+        <!--		<dependency>-->
 <!--			<groupId>com.oracle.jdbc</groupId>-->
 <!--			<artifactId>ojdbc6</artifactId>-->
 <!--			<version>11.2.0.4</version>-->
