--- a/demo2/pom.xml
+++ b/demo2/pom.xml
@@ -46,6 +46,19 @@
 			<version>0.11.5</version>
 		</dependency>
 
+		<!-- Pentru Spring Boot 3.x+ (Jakarta) -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<!-- SAU pentru versiuni mai vechi (Javax) -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-impl</artifactId>
