--- a/demo3/pom.xml
+++ b/demo3/pom.xml
@@ -80,6 +80,14 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-resolver-dns-native-macos</artifactId>
+			<version>4.1.100.Final</version> <!-- sau o versiune compatibilă cu restul Netty -->
+			<classifier>osx-aarch_64</classifier> <!-- pentru Mac M1/M2 -->
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
