Added classes for m1-m2-m3 communication

--- a/demo3/src/main/resources/application.properties
+++ b/demo3/src/main/resources/application.properties
@@ -25,3 +25,8 @@ spring.jpa.hibernate.ddl-auto = update
 
 # Sql queries logging
 logging.level.org.hibernate.SQL=DEBUG
+
+
+# URL-uri pentru microservicii
+app.user-service.url=http://localhost:8080
+app.post-service.url=http://localhost:8081
